--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "project",
+	"name": "backend_project",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -13,12 +13,19 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"morgan": "^1.10.0"
+		"jsonwebtoken": "^8.5.1",
+		"morgan": "^1.10.0",
+		"mysql": "^2.18.1",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
 		"@types/morgan": "^1.9.3",
+		"@types/uuid": "^8.3.1",
 		"dotenv": "^10.0.0",
 		"tsc-watch": "^4.5.0",
 		"typescript": "^4.4.3"
