--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
 PORT=3000
+
+//data base
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=
+DB_BASE=express_mysql
+DB_LIMIT=10
+
+//jwt
+
+MY_SECRETE_KEY=DADAROM
