--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
-		"mysql": "^2.18.1",
-		"uuid": "^8.3.2"
+		"mysql2": "^2.3.0",
+		"uuid": "^8.3.2",
+		"yup": "^0.32.9"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.5",
 		"@types/morgan": "^1.9.3",
+		"@types/mysql2": "github:types/mysql2",
 		"@types/uuid": "^8.3.1",
 		"dotenv": "^10.0.0",
 		"tsc-watch": "^4.5.0",
