--- a/.env
+++ b/.env
@@ -1,13 +1,9 @@
 PORT=3000
 
-//data base
-
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
 DB_BASE=express_mysql
 DB_LIMIT=10
 
-//jwt
-
-MY_SECRETE_KEY=DADAROM
+MY_SECRETE_KEY=JULI
